Istio/kiali_to_ingressgateway/02-kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "kiali.done.com"
  gateways:
  - kiali-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: kiali  # 代表svc所组成的cluster,与k8s svc同名
        port:
          number: 20001
---


# istio默认会把所有k8s svc转换为envoy的cluster,并应用在envoy的Egress Cluster上，便于随意某应用能访问网络内任意服务或应用，因为网格不知道你的应用想访问哪个应用(打了kubectl label namespace default istio-injection=enabled标签的名称空间)
#
