Istio/kiali_to_ingressgateway/03-kiali-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: DISABLE
---



# kiali 部署在istio-system名称空间，由于处在网格名称空间，默认会生成kiali 与svc同名的cluster, 所以除非有高级定义，否则DestinationRule不必定义
